--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,46 @@
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
+
+    <style name="circular">
+        <item name="cornerSize">30%</item>
+    </style>
+
+    <style name="circle">
+        <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="success_toast">
+        <item name="stTextColor">#fff</item>
+        <item name="stFont">@font/exo2_bold</item>
+        <item name="stTextSize">14sp</item>
+        <item name="stColorBackground">@color/xanhnhat</item>
+        <item name="stIconStart">@drawable/baseline_check_circle_outline_24</item>
+        <item name="stRadius">10dp</item>
+        <item name="stLength">SHORT</item>
+    </style>
+
+    <style name="error_toast">
+        <item name="stTextColor">#fff</item>
+        <item name="stFont">@font/exo2_bold</item>
+        <item name="stTextSize">14sp</item>
+        <item name="stColorBackground">#FF5E65</item>
+        <item name="stIconStart">@drawable/baseline_error_outline_24</item>
+        <item name="stRadius">10dp</item>
+        <item name="stLength">SHORT</item>
+    </style>
+
+    <style name="warning">
+        <item name="stTextColor">#fff</item>
+        <item name="stFont">@font/exo2_bold</item>
+        <item name="stTextSize">14sp</item>
+        <item name="stColorBackground">#CCAC40</item>
+        <item name="stIconStart">@drawable/baseline_miscellaneous_services_24</item>
+        <item name="stRadius">10dp</item>
+        <item name="stLength">SHORT</item>
+    </style>
 </resources>
