--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.SplashActivity"
+    tools:context=".activity.SplashActivity"
     android:fitsSystemWindows="true"
     android:background="@drawable/appbackground">
 
