--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/appbackground"
-    tools:context=".Activity.VerificationActivity">
+    tools:context=".activity.VerificationActivity">
 
     <TextView
         android:id="@+id/tv_tieuDe"
