--- a/app/src/main/res/layout/item_find_friend.xml
+++ b/app/src/main/res/layout/item_find_friend.xml
@@ -1,43 +1,35 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="10dp"
     android:weightSum="10">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/friendAvatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/user"
         android:scaleType="centerCrop"
-        android:layout_marginEnd="10dp"/>
+        android:layout_marginEnd="10dp"
+        app:shapeAppearance="@style/circle"
+        android:layout_gravity="center_vertical"/>
 
-    <LinearLayout
-        android:layout_weight="9"
+
+    <TextView
+        android:id="@+id/friendName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/friendName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Friend Name"
-            android:textSize="16sp"
-            android:textColor="@color/purple"/>
-
-        <TextView
-            android:id="@+id/friendPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Phone Number"
-            android:textSize="14sp"
-            android:textColor="@color/purple"/>
-
-
-    </LinearLayout>
+        android:layout_weight="9"
+        android:ellipsize="end"
+        android:fontFamily="@font/sf_semi_bold"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:layout_marginLeft="5dp"
+        android:text="Friend Nameeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/btn_addFriend"
@@ -45,4 +37,11 @@
         android:layout_height="wrap_content"
         android:text="Thêm"
         android:layout_marginLeft="10dp"/>
+
+    <ImageView
+        android:id="@+id/daThemCheck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_check_circle_outline_24"
+        android:layout_gravity="center"/>
 </LinearLayout>
