giao dien activity message

--- a/app/src/main/res/layout/activity_lobby_message.xml
+++ b/app/src/main/res/layout/activity_lobby_message.xml
@@ -11,17 +11,23 @@
         android:id="@+id/titleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/appbackground"
+        android:background="@color/tim_nhat_hon"
         android:text="Cuộc hội thoại"
         android:textSize="20sp"
         android:textAlignment="center"
         android:padding="10dp"
         android:fontFamily="@font/sf_bold"/>
 
+    <ImageView
+        android:id="@+id/backBtnLobby"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_keyboard_arrow_left_24"
+        android:layout_margin="15dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myFriendRecyclerView"
         android:layout_below="@+id/titleText"
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
