--- a/app/src/main/res/layout/item_find_friend.xml
+++ b/app/src/main/res/layout/item_find_friend.xml
@@ -24,7 +24,7 @@
         android:layout_weight="9"
         android:ellipsize="end"
         android:fontFamily="@font/sf_semi_bold"
-        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
         android:maxLines="1"
         android:layout_marginLeft="5dp"
         android:text="Friend Nameeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
@@ -35,6 +35,7 @@
         android:id="@+id/btn_addFriend"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:text="Thêm"
         android:layout_marginLeft="10dp"/>
 
