--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".activity.function.MessageActivity">
 
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl1"
         android:layout_width="match_parent"
@@ -46,6 +45,7 @@
             android:layout_margin="10dp"
             android:layout_toRightOf="@+id/btnBack"
             android:padding="3dp"
+            android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/circle"
             app:srcCompat="@drawable/user" />
 
@@ -53,19 +53,33 @@
             android:id="@+id/userNameMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/avtUserMessage"
             android:fontFamily="@font/sf_semi_bold"
             android:text="User name"
             android:textColor="@color/white"
             android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_toRightOf="@+id/avtUserMessage"
+            android:layout_below="@+id/userNameMessage"
+            android:fontFamily="@font/sf_regular"
+            android:text="Status"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:layout_marginTop="-7dp"/>
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMessage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@id/cardViewKhoiChucNang"
         app:layout_constraintTop_toBottomOf="@+id/khoiThongTinMessage"/>
 
@@ -90,37 +104,29 @@
 
             <ImageButton
                 android:id="@+id/btnAddImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
+                android:padding="3dp"
                 android:background="@drawable/tran_btn_solid"
                 android:src="@drawable/baseline_monochrome_photos_24" />
-
-            <ImageButton
-                android:id="@+id/btnAddAttach"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
-                android:background="@drawable/tran_btn_solid"
-                android:src="@drawable/baseline_attach_file_24" />
-
             <EditText
                 android:id="@+id/edt_message"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:textColorHint="#6C6868"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/tran_btn_solid"
                 android:fontFamily="@font/sf_regular"
-                android:hint="   Nhắn tin..." />
+                android:hint="  Nhắn tin..." />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/gl1"
         app:layout_constraintRight_toRightOf="parent"
@@ -132,15 +138,15 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/item_color_xanh_duong">
+            android:background="#267EBA">
 
             <ImageButton
                 android:id="@+id/btnSendMessage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:background="@drawable/tran_btn_solid"
-                android:src="@drawable/baseline_send_24" />
+                android:src="@drawable/baseline_send_24"
+                android:layout_centerInParent="true"/>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
