--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -9,16 +9,21 @@
     android:background="@color/white">
 
 
+    <ImageView
+        android:id="@+id/btnBackFindFriend"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:id="@+id/edt_findFriend"
+        android:layout_toRightOf="@+id/btnBackFindFriend"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="10dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="9dp"
         android:background="@drawable/custom_edittext"
         android:drawableLeft="@drawable/baseline_search_24"
         android:drawablePadding="8dp"
